--- a/src/pages/set_yara/set_yara.css
+++ b/src/pages/set_yara/set_yara.css
@@ -12,3 +12,18 @@
 .box{
     box-shadow: 0 0px 0px rgba(0,0,0,0);
 }
+
+.yara_span{
+    display: inline-block;
+    width: 100px;
+}
+
+.yara_rule{
+    padding: 20px
+}
+.btn_yara{
+    min-width: 80px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0
+}
